--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20150702-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20150702.csv.xz
+	execute: Periodic data update on 2015-07-02
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/974ed2b64244de6dbd31e56cdf1466822ba69b26
+
 # Release 20150623-01
 
 ### New seed data
