--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20150709-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20150709.csv.xz
+	execute: Aperiodic data update on 2015-07-09
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/d01bf075d7d900092b768b08982b66160377977d
+
 # Release 20150702-01
 
 ### New seed data
