--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20150716-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20150716.csv.xz
+	execute: Periodic data update on 2015-07-16
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/5309f2d226989572956e9ed26656043f79bec4b7
+
 # Release 20150709-01
 
 ### New seed data
