--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20150723-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20150723.csv.xz
+	execute: Aperiodic data update on 2015-07-23
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/c1bae2894fd8a9d0a36f541d9f76d68708508c73
+
 # Release 20150716-01
 
 ### New seed data
