--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20150810-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20150810.csv.xz
+	execute: Aperiodic data update on 2015-08-10
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/18468f5effcf439833cc113018b47698909885f7
+
 # Release 20150803-01
 
 ### New seed data
