--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20150817-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20150817.csv.xz
+	execute: Periodic data update on 2015-08-17
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/78940459074bb18fef9341568babdfc8b7453ee8
+
 # Release 20150810-01
 
 ### New seed data
