--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20150824-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20150824.csv.xz
+	execute: Aperiodic data update on 2015-08-24(Add many fashion brand names)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/bb19a5fc5d50800568be7753f554242d9e18e65d
+
 # Release 20150817-01
 
 ### New seed data
