--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20150901-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20150901.csv.xz
+	execute: Periodic data update on 2015-09-01
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/59fa46f3ac809985c0de5d8c993e02e9ecf584f0
+
 # Release 20150824-01
 
 ### New seed data
