--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20150907-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20150907.csv.xz
+	execute: Aperiodic data update on 2015-09-07
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/48d982db66b8b6adc660ba08ed6ba1c317661d76
+
 # Release 20150901-01
 
 ### New seed data
