--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20150912-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20150912.csv.xz
+	execute: Aperiodic data update on 2015-09-12
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/ee5d6315abbf4dcb87e94e0060d97ac4d54cf4be
+
 # Release 20150907-01
 
 ### New seed data
