--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20150915-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20150915.csv.xz
+	execute: Periodic data update on 2015-09-15
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/d0b8a70d1f43766a6399a402f5b2c287ad3e8b64
+
 # Release 20150912-01
 
 ### New seed data
