--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20150918-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20150918.csv.xz
+	execute: Aperiodic data update on 2015-09-18
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/ef006dddf3babcecb4d46ccad9245d44f3b91bf5
+
 # Release 20150915-01
 
 ### New seed data
