--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20150925-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20150925.csv.xz
+	execute: Aperiodic data update on 2015-09-25(Fri)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/4a229ec405c36f88c60567d8cf455e5010ef34a1
+
 # Release 20150922-01
 
 ### New seed data
