--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20151005-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20151005.csv.xz
+	execute: Aperiodic data update on 2015-10-05(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/331aa9ce2ccab6e6c71c2f90a075a864dee48483
+
 # Release 20151001-01
 
 ### New seed data
