--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20151008-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20151008.csv.xz
+	execute: Aperiodic data update on 2015-10-08(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/65efa3ee6cad196f1a2cf0b75a56ea0d310075f2
+
 # Release 20151005-01
 
 ### New seed data
