--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20151015-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20151015.csv.xz
+	execute: Aperiodic data update on 2015-10-15(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/10c7b0df54f82ee431e82e601c1cf44bf9b91ce5
+
 # Release 20151008-01
 
 ### New seed data
