--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20151019-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20151019.csv.xz
+	execute: Aperiodic data update on 2015-10-19(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/5a3239846ad6cbed41e3bc9aaa6ed4526c9be1c7
+
 # Release 20151015-01
 
 ### New seed data
