--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20151022-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20151022.csv.xz
+	execute: Aperiodic data update on 2015-10-22(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/d2fbd151fdc4d50f66c3b599527a8b75d4dff2f6
+
 # Release 20151019-01
 
 ### New seed data
