--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20151026-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20151026.csv.xz
+	execute: Aperiodic data update on 2015-10-26(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/1efa541dec00b877aa63aa5b4098a53441052042
+
 # Release 20151022-01
 
 ### New seed data
