--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20151105-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20151105.csv.xz
+	execute: Aperiodic data update on 2015-11-05(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/39ad084c40ef7b3d8d704b9081b851fa4fb10d0c
+
 # Release 20151102-01
 
 ### New seed data
