--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20151109-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20151109.csv.xz
+	execute: Aperiodic data update on 2015-11-09(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/e8b3f9398f1fc1e7367f44a0051b825f2b9d8fcc
+
 # Release 20151105-01
 
 ### New seed data
