--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20151112-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20151112.csv.xz
+	execute: Aperiodic data update on 2015-11-12(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/e9a03183ab459fa8c815c1edb9484484bc9cef30
+
 # Release 20151109-01
 
 ### New seed data
