--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20151116-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20151116.csv.xz
+	execute: Aperiodic data update on 2015-11-16(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/84753b36c60e8167e06014e4545a3cbbce08c59c
+
 # Release 20151112-01
 
 ### New seed data
