--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20151119-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20151119.csv.xz
+	execute: Aperiodic data update on 2015-11-19(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/fc176aacc8c66c3e5a4d0eeafb715fca2d905ea4
+
 # Release 20151116-01
 
 ### New seed data
