--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20151123-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20151123.csv.xz
+	execute: Aperiodic data update on 2015-11-23(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/8996f6dfbc374f70c7378cc8f97d2ff49cd27190
+
 # Release 20151119-01
 
 ### New seed data
