--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20151130-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20151130.csv.xz
+	execute: Aperiodic data update on 2015-11-30(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/3eca63944e2cfcd6d8cab3ed05bc8e3232b6374f
+
 # Release 20151126-01
 
 ### New seed data
