--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+# Release 20151207-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20151207.csv.xz
+	execute: Aperiodic data update on 2015-12-07(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/4fb583c0d49c429ca4a4acb5fb4cbc0e30cbb05c
+
+# Release 20151203-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20151203.csv.xz
+	execute: Aperiodic data update on 2015-12-03(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/c12ce4c6323492c1317626609e93ed1002ea806d
+
 # Release 20151130-01
 
 ### New seed data
