--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20151210-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20151210.csv.xz
+	execute: Aperiodic data update on 2015-12-10(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/3c3ba94a0c2e868ee900f3bfaeaa980236b599f4
+
 # Release 20151207-01
 
 ### New seed data
