--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20151214-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20151214.csv.xz
+	execute: Aperiodic data update on 2015-12-14(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/2bd6679a02e432f572bc0a98ca61c1b2050c6b99
+
 # Release 20151210-01
 
 ### New seed data
