--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20151217-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20151217.csv.xz
+	execute: Aperiodic data update on 2015-12-17(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/e48c3ee03c7370c96ca1fda2de69c842413c5212
+
 # Release 20151214-01
 
 ### New seed data
