--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 2015121-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20151221.csv.xz
+	execute: Aperiodic data update on 2015-12-21(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/a7b76e2d254c61d59f9e7bd39860fb3c284671fd
+
 # Release 20151217-01
 
 ### New seed data
