--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20151224-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20151224.csv.xz
+	execute: Aperiodic data update on 2015-12-24(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/944a50d53de058de1410d481cc6f679d21be7fbb
+
 # Release 2015121-01
 
 ### New seed data
