--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 2015128-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20151228.csv.xz
+	execute: Periodic data update on 2015-12-28(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/7c7502c0b23d8c315e370fc7296c4deffd974997
+
 # Release 20151224-01
 
 ### New seed data
