--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20151231-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20151231.csv.xz
+	execute: Aperiodic data update on 2015-12-31(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/41dc303c486eaee9ea69a5bcb182246a3ba51bc6
+
 # Release 2015128-01
 
 ### New seed data
