--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160104-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160104.csv.xz
+	execute: Periodic data update on 2016-01-04(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/7c7502c0b23d8c315e370fc7296c4deffd974997
+
 # Release 20151231-01
 
 ### New seed data
