--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160111-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160111.csv.xz
+	execute: Periodic data update on 2016-01-11(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/38fc6f2f9ed8eb31290f9fa268f3cf4bb817d937
+
 # Release 20160107-01
 
 ### New seed data
