--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160114-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160114.csv.xz
+	execute: Periodic data update on 2016-01-14(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/8e56fbe854a50d6af8fa5c45a6b840972bb50333
+
 # Release 20160111-01
 
 ### New seed data
