--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160125-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160125.csv.xz
+	execute: Periodic data update on 2016-01-25(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/9c5b62796918eb33c7676ef06dad90304eeb5e3a
+
 # Release 20160121-01
 
 ### New seed data
