--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160128-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160128.csv.xz
+	execute: Periodic data update on 2016-01-28(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/c242fd4c2e0b21aeedebaf8d4f068e907af958fb
+
 # Release 20160125-01
 
 ### New seed data
