--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160208-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160208.csv.xz
+	execute: Periodic data update on 2016-02-08(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/dcf105b4e6cbb974672f86cacfc2c506122f4365
+
 # Release 20160205-01
 
 ### New seed data
