--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160212-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160212.csv.xz
+	execute: Periodic data update on 2016-02-11(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/1ccbc5a72a75b7c0ba3a1a22005bd03c86591249
+
 # Release 20160208-01
 
 ### New seed data
