--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160215-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160215.csv.xz
+	execute: Periodic data update on 2016-02-15(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/a1a6e34f9106199e0222d2fa308f62a2847aeeaf
+
 # Release 20160212-01
 
 ### New seed data
