--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160225-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160225.csv.xz
+	execute: Periodic data update on 2016-02-25(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/e66f6f340781d3a24223fcc57f5a6f46240a3a69
+
 # Release 20160222-01
 
 ### New seed data
