--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160303-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160303.csv.xz
+	execute: Periodic data update on 2016-03-03(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/0292c17bdd557b767e21e6eee1c11be2d0776779
+
 # Release 20160229-01
 
 ### New seed data
