--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160307-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160307.csv.xz
+	execute: Periodic data update on 2016-03-07(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/5b79ce3d52f13e885bfcbf76095298a69f11113a
+
 # Release 20160303-01
 
 ### New seed data
