--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160314-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160314.csv.xz
+	execute: Periodic data update on 2016-03-14(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/4f491274fb7c90f13b886ba72312d60bfa02081a
+
 # Release 20160310-01
 
 ### New seed data
