--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160317-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160317.csv.xz
+	execute: Periodic data update on 2016-03-17(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/95e7b79f014f60b986f6ecb5b308c4ab2482190a
+
 # Release 20160314-01
 
 ### New seed data
