--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160328-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160328.csv.xz
+	execute: Periodic data update on 2016-03-28(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/ee1633ae73fe7981069d588c9e1727a8aff0bf0f
+
 # Release 20160324-01
 
 ### New seed data
