--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160331-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160331.csv.xz
+	execute: Periodic data update on 2016-03-31(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/5b61010c2b98f79c8670a50c6238ea8aa6642498
+
 # Release 20160328-01
 
 ### New seed data
