--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160404-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160404.csv.xz
+	execute: Periodic data update on 2016-04-04(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/4ffb75655fe316b161c35a0848b59bc5d0f6fe69
+
 # Release 20160331-01
 
 ### New seed data
