--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160407-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160407.csv.xz
+	execute: Periodic data update on 2016-04-07(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/e37b9dff66bd1c68a5a1c4b71b24d9f4d0470264
+
 # Release 20160404-01
 
 ### New seed data
