--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160418-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160418.csv.xz
+	execute: Periodic data update on 2016-04-18(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/680353a2b7c544fe2011735afb0be944f2fdf090
+
 # Release 20160414-01
 
 ### New seed data
