--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160421-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160421.csv.xz
+	execute: Periodic data update on 2016-04-21(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/7a4416063fda7ca1707460ee147be77c12448894
+
 # Release 20160418-01
 
 ### New seed data
