--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160428-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160428.csv.xz
+	execute: Periodic data update on 2016-04-28(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/c8e47c22a8986526102b3462d8d44059ac104d27
+
 # Release 20160425-01
 
 ### New seed data
