--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160505-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160505.csv.xz
+	execute: Periodic data update on 2016-05-05(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/51fae8e5b10a05ab7c02425a201e809595f3764f
+
 # Release 20160502-01
 
 ### New seed data
