--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160512-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160512.csv.xz
+	execute: Periodic data update on 2016-05-12(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/6ad958c2b88459b03d6927cf6f949bff533a2cf2
+
 # Release 20160509-01
 
 ### New seed data
