--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160516-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160516.csv.xz
+	execute: Periodic data update on 2016-05-16(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/9ef65cb072f5e2b598eafaa7143a887332a408ec
+
 # Release 20160512-01
 
 ### New seed data
