--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160523-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160524.csv.xz
+	execute: Periodic data update on 2016-05-23(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/f4ca099f1ab287e61c80ee5678ff6bb151825586
+
 # Release 20160519-01
 
 ### New seed data
