--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160526-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160526.csv.xz
+	execute: Periodic data update on 2016-05-26(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/d56f63f20de518bb9a9f75136f79a098a0ef4cee
+
 # Release 20160523-01
 
 ### New seed data
