Periodic data update on 2016-06-02(Thu)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160602-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160602.csv.xz
+	execute: Periodic data update on 2016-06-02(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/6cd2164e639b8347ce0e88c680796b22e43dc0f4
+
 # Release 20160530-01
 
 ### New seed data
