--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160613-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160613.csv.xz
+	execute: Periodic data update on 2016-06-13(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/ae82ca90969da6f261f661141008c41610fdfe0c
+
 # Release 20160609-01
 
 ### New seed data
