--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160616-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160616.csv.xz
+	execute: Periodic data update on 2016-06-16(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/5fe5fc50822d4293f596e9628a2d6171cd7e0fbe
+
 # Release 20160613-01
 
 ### New seed data
