--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160620-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160620.csv.xz
+	execute: Periodic data update on 2016-06-20(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/93869aeb84242ddac40a6b8a190ac4123209245f
+
 # Release 20160616-01
 
 ### New seed data
