--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160623-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160624.csv.xz
+	execute: Periodic data update on 2016-06-23(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/c74a53328282dcd8c416e1898c00532d0d325837
+
 # Release 20160620-01
 
 ### New seed data
