--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160704-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160704.csv.xz
+	execute: Periodic data update on 2016-07-04(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/9102c7c0bf9e456ba2ac85ba54d530a7eb2c50b7
+
 # Release 20160630-01
 
 ### New seed data
