--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160707-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160707.csv.xz
+	execute: Periodic data update on 2016-07-07(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/4551f6bdc47a370bf01de6ed6007ebb83a5b93d5
+
 # Release 20160704-01
 
 ### New seed data
