--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160714-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160714.csv.xz
+	execute: Periodic data update on 2016-07-14(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/337fe6da24e645541e5885481a443a946bee9b7a
+
 # Release 20160711-01
 
 ### New seed data
