--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160726-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160725.csv.xz
+	execute: Periodic data update on 2016-07-25(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/cfdf8cd19d8860437ae2a08fa7ef9fa9f5477cd0
+
 # Release 20160721-01
 
 ### New seed data
