--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160728-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160728.csv.xz
+	execute: Periodic data update on 2016-07-28(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/0587c48ee5c39d622ccd09ca7693585afc64e494
+
 # Release 20160726-01
 
 ### New seed data
