--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160804-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160804.csv.xz
+	execute: Periodic data update on 2016-08-04(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/7f059fcb3cf64df8bcbe4ff825b2e668d332d26f
+
 # Release 20160802-01
 
 ### New seed data
