--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160808-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160808.csv.xz
+	execute: Periodic data update on 2016-08-08(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/faf600aa5d45dba284c16eacc6b85f5b38c8b24a
+
 # Release 20160804-01
 
 ### New seed data
