--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160826-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160826.csv.xz
+	execute: Periodic data update on 2016-08-26(Fri)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/4479b4608e8b294f7eed22fbd3819b8f10b7aaa9
+
 # Release 20160822-01
 
 ### New seed data
