--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160829-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160829.csv.xz
+	execute: Periodic data update on 2016-08-29(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/60200157c65d3bcdec8920e26514b2114404514b
+
 # Release 20160826-01
 
 ### New seed data
