--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160901-01
+
+### New seed data
+* seed/mecab-user-dict-seed.201609902.csv.xz
+	execute: Periodic data update on 2016-09-01(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/c09b649fc3de7a30de43e48549a2ee18245f53d5
+
 # Release 20160829-01
 
 ### New seed data
