--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160919-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160919.csv.xz
+	execute: Periodic data update on 2016-09-19(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/e0e67b225854a2e73f32e4e2e5b130b41159dc5d
+
 # Release 20160915-01
 
 ### New seed data
