--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160922-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160922.csv.xz
+	execute: Periodic data update on 2016-09-22(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/8b347c101ab5384b375ceb3831dd87f2057df650
+
 # Release 20160919-01
 
 ### New seed data
