--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160926-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160927.csv.xz
+	execute: Periodic data update on 2016-09-26(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/ba3367769d96d6287c542bb08455cb929cc32750
+
 # Release 20160922-01
 
 ### New seed data
