--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20160929-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20160929.csv.xz
+	execute: Periodic data update on 2016-09-29(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/843d84991f8950b37e9369ab952ef9bf9175a395
+
 # Release 20160926-01
 
 ### New seed data
