--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20161003-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20161003.csv.xz
+	execute: Periodic data update on 2016-10-03(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/c808ee4c0eb9f8a38c5116f7c67c7a588a27d9bb
+
 # Release 20160929-01
 
 ### New seed data
