--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20161006-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20161006.csv.xz
+	execute: Periodic data update on 2016-10-06(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/87ea12509fefee8b5b368e90c7b281446166f013
+
 # Release 20161003-01
 
 ### New seed data
