--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20161017-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20161017.csv.xz
+	execute: Periodic data update on 2016-10-17(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/8b17d8b2c6486d67caa2972f3c4f8ae114073ba2
+
 # Release 20161013-01
 
 ### New seed data
