--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20161021-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20161021.csv.xz
+	execute: Aperiodic data update on 2016-10-21(Fri)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/3621f824450c1d1e41903ea5be600898cbbcfbc8
+
 # Release 20161020-01
 
 ### New seed data
