--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20161107-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20161107.csv.xz
+	execute: Periodic data update on 2016-11-07(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/625a5117d2e95980ea97a00a67be80559ce22d07
+
 # Release 20161103-01
 
 ### New seed data
