--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20161110-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20161110.csv.xz
+	execute: Periodic data update on 2016-11-10(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/a654c51bf9848558a871d1bdd09f99885ef06d21
+
 # Release 20161107-01
 
 ### New seed data
