--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20161121-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20161121.csv.xz
+	execute: Periodic data update on 2016-11-21(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/1bb752690d6cef194fa410fa07a6f2176e658033
+
 # Release 20161117-01
 
 ### New seed data
