--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20161124-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20161124.csv.xz
+	execute: Periodic data update on 2016-11-24(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/c91c09d287fbcc443f707c8987dcf34dca4642fb
+
 # Release 20161121-01
 
 ### New seed data
