--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20161205-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20161205.csv.xz
+	execute: Periodic data update on 2016-12-05(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/ea16d2b807c85bfbac97a61dc65aa0908e2006cc
+
 # Release 20161201-01
 
 ### New seed data
