--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20161229-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20161229.csv.xz
+	execute: Periodic data update on 2016-12-29(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/f866e540fa7506b7cd0100ffc61cd18e73365bf3
+
 # Release 20161226-01
 
 ### New seed data
