--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170102-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170102.csv.xz
+	execute: Periodic data update on 2017-01-02(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/0d487bdb0618efb7c4b5acf3497012ac0185c60d
+
 # Release 20161229-01
 
 ### New seed data
