--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170105-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170105.csv.xz
+	execute: Periodic data update on 2017-01-05(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/1a431f829b67c73c6a6376c5da8ad5f60ce3402f
+
 # Release 20170102-01
 
 ### New seed data
