--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170109-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170109.csv.xz
+	execute: Periodic data update on 2017-01-09(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/92880e267efe472e4cd83ca6e82e53d7885fcbe4
+
 # Release 20170105-01
 
 ### New seed data
