--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170112-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170112.csv.xz
+	execute: Periodic data update on 2017-01-12(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/adb079456055184b223b0ca8cdb891fd75b8c1a9
+
 # Release 20170109-01
 
 ### New seed data
