--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170206-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170206.csv.xz
+	execute: Periodic data update on 2017-02-06(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/a62a87c969ffad53a62b67e99998ce3dbbe81575
+
 # Release 20170202-01
 
 ### New seed data
