--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170209-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170209.csv.xz
+	execute: Periodic data update on 2017-02-09(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/5061545e24d3908fc5009616ad426e16bd664568
+
 # Release 20170206-01
 
 ### New seed data
