--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170213-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170213.csv.xz
+	execute: Periodic data update on 2017-02-13(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/c6295ff4e5c70ffa711949e207f80d7dd2e1f5f0
+
 # Release 20170209-01
 
 ### New seed data
