--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170216-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170216.csv.xz
+	execute: Periodic data update on 2017-02-16(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/3be28a2efdaa3c78de6cc48d12ecf652f0347050
+
 # Release 20170213-01
 
 ### New seed data
