--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170220-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170220.csv.xz
+	execute: Periodic data update on 2017-02-20(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/236fe2c74e0a279bfa0b1b47c51bdd5a7b84f403
+
 # Release 20170216-01
 
 ### New seed data
