--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170223-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170223.csv.xz
+	execute: Periodic data update on 2017-02-23(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/92e634bcf123c3fb8380dfe4eb140a6f2d53548b
+
 # Release 20170220-01
 
 ### New seed data
