--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170303-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170303.csv.xz
+	execute: Periodic data update on 2017-03-03(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/9b09d90bbc23badea3aa2e1c1e542eb012030658
+
 # Release 20170227-01
 
 ### New seed data
