--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170313-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170313.csv.xz
+	execute: Periodic data update on 2017-03-13(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/51b5b5ac267781a4016c46ba8dfcb749d6ef0b56
+
 # Release 20170309-01
 
 ### New seed data
