--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170320-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170320.csv.xz
+	execute: Periodic data update on 2017-03-20(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/fa66b688fe21754c9d2a1e264dc4ceb42516b2e4
+
 # Release 20170317-01
 
 ### New seed data
