--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170403-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170403.csv.xz
+	execute: Periodic data update on 2017-04-03(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/120fbbc5d24f8c3275da09caeeb629aa622c10ca
+
 # Release 20170330-01
 
 ### New seed data
