--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170406-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170406.csv.xz
+	execute: Periodic data update on 2017-04-06(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/dde10e1e12985bcbc49444407e333a10f6b98859
+
 # Release 20170403-01
 
 ### New seed data
