--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170413-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170413.csv.xz
+	execute: Periodic data update on 2017-04-13(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/78683fecdfb52f304868b2b2e6a15f1f702890de
+
 # Release 20170410-01
 
 ### New seed data
