--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170417-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170417.csv.xz
+	execute: Periodic data update on 2017-04-17(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/2d5c58cf3133bcb79ac515fb1139f3719daa037b
+
 # Release 20170413-01
 
 ### New seed data
