--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170420-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170420.csv.xz
+	execute: Periodic data update on 2017-04-20(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/60057f711ee9d70c9eab94f595193955204be0e0
+
 # Release 20170417-01
 
 ### New seed data
