--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170427-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170427.csv.xz
+	execute: Periodic data update on 2017-04-27(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/70d2aa20b9d44969322ee33c9593d437ccab41bb
+
 # Release 20170424-01
 
 ### New seed data
