--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170501-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170501.csv.xz
+	execute: Periodic data update on 2017-05-01(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/e2f85a3a6a79afcabe1d71d94b3d94362df9403e
+
 # Release 20170427-01
 
 ### New seed data
