--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170504-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170504.csv.xz
+	execute: Periodic data update on 2017-05-04(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/fbf163ffce72bae5a390749f7119bc6ac1625c95
+
 # Release 20170501-01
 
 ### New seed data
