--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170511-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170511.csv.xz
+	execute: Periodic data update on 2017-05-11(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/bd43940f88bf9907c0e69a82ad8c2f138e60ceaf
+
 # Release 20170508-01
 
 ### New seed data
