--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170515-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170515.csv.xz
+	execute: Periodic data update on 2017-05-15(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/8f5c235d842fe5af96133cf688d8e637290be140
+
 # Release 20170511-01
 
 ### New seed data
