--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170522-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170522.csv.xz
+	execute: Periodic data update on 2017-05-22(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/31ab43d4f4f3755b0a6b9d2c931af23754055d99
+
 # Release 20170518-01
 
 ### New seed data
